sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:6: error: not found: value getNombresValeurs
    for(i<- 0 to getNombresValeurs()-2){
                 ^AlgCocktailSort1:12: error: not found: value getNombresValeurs
    for(j<- getNombresValeurs()-2 to 0){
            ^AlgCocktailSort1:13: error: not found: value i
      if(plusPetit(i,i+1)){
                   ^AlgCocktailSort1:13: error: not found: value i
      if(plusPetit(i,i+1)){
                     ^AlgCocktailSort1:14: error: not found: value i
        echange(i,i+1)
                ^AlgCocktailSort1:14: error: not found: value i
        echange(i,i+1)
                  ^